Fixed alignment on Campgin page block headers.

--- a/client/styles/home.scss
+++ b/client/styles/home.scss
@@ -122,17 +122,18 @@
 .name-head {
   color: #ffffff;
   font-size: 1.85em;
-  text-align: center;
+  margin-left: 18px;
   margin-top: 10px;
+  // text-align: center;
 }
 
-.name-head-left {
-  margin-left: 125px;
-}
-
-.name-head-left-pledge {
-  margin-left: 165px;
-}
+// .name-head-left {
+//   margin-left: 125px;
+// }
+//
+// .name-head-left-pledge {
+//   margin-left: 165px;
+// }
 
 .panel {
   display: block;
